--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "electron": "^21.2.0"
   },
   "dependencies": {
-    "path": "^0.12.7"
+    "cheerio": "^1.0.0-rc.12",
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "twig": "^1.15.4"
   }
 }
